docs: fix outdated skill on maven plugin equivalents